# aero15x-fand

./: .gitignore  CMakeLists.txt  README.md
include/aero15x/: aero15x.hpp  change_detector.hpp  logging.hpp  median_filter.hpp
src/: CMakeLists.txt  aero15x.cpp  change_detector.cpp  logging.cpp  median_filter.cpp
systemd/: CMakeLists.txt  aero15x-fand.service
test/: CMakeLists.txt  test_detector.cpp  test_median_filter.cpp
